# nRF5-cmake-framework

./: CMakeLists.txt  README.md  monitor.sh
RTT/: runJLinkExe-nrf52  runJLinkGDBServer-nrf52  runJLinkRTTClient
cmake/: CMake_nRF5x.cmake  nRF5x.cmake
cmake-nRF5x/: CMake_nRF5x.cmake
config/: gcc_nrf52.ld  sdk_config.h
services/: led_service.c  led_service.h
src/: CMakeLists.txt  main.c  main_old.c
